[gd_scene load_steps=4 format=3 uid="uid://icqhabgpsu6y"]

[ext_resource type="Script" path="res://menu/Menu.gd" id="1_63qst"]
[ext_resource type="Texture2D" uid="uid://curojrdmmapiv" path="res://icon.png" id="1_200ln"]
[ext_resource type="PackedScene" uid="uid://bnpitta38flni" path="res://arena/Arena.tscn" id="2_2oevl"]

[node name="MenuBG" type="NinePatchRect"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 4
script = ExtResource("1_63qst")
arena_scene = ExtResource("2_2oevl")

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -100.0
offset_right = 32.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("1_200ln")

[node name="OptionButton" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("1_200ln")

[node name="ExitButton" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("1_200ln")

[connection signal="mouse_entered" from="ButtonContainer/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="ButtonContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/OptionButton" to="." method="_on_option_button_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/OptionButton" to="." method="_on_option_button_mouse_exited"]
[connection signal="pressed" from="ButtonContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
